# velk-platform

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.md
android/: build.gradle.kts  settings.gradle.kts
android/velk-platform/: CMakeLists.txt  build.gradle.kts
app/: CMakeLists.txt  main.cpp
docs/: README.md  getting-started.md  performance.md  render-backend-architecture.md  scene.md  update-cycle.md  velk-ui-plan.md  velk-ui-social-preview.html
docs/plugins/: gltf.md  image.md  text.md
docs/render/: lighting.md  materials.md  mesh.md  render-backend.md  rendering.md
plugins/image/: CMakeLists.txt
plugins/image/include/velk-ui/plugins/image/: intf_image_material.h  intf_image_visual.h  plugin.h
plugins/image/include/velk-ui/plugins/image/api/: environment.h  image.h  image_material.h  image_visual.h
plugins/image/src/: env_decoder.cpp  env_decoder.h  env_material.cpp  env_material.h  environment.cpp  environment.h  image.cpp  image.h  image_decoder.cpp  image_decoder.h  image_material.cpp  image_material.h  image_plugin.cpp  image_plugin.h  image_visual.cpp  image_visual.h
plugins/render/core/: CMakeLists.txt
plugins/render/core/include/velk-ui/api/: render_context.h
plugins/render/core/include/velk-ui/plugins/render/: intf_render_backend.h  platform.h  plugin.h
plugins/render/core/src/: default_shaders.h  intf_renderer_internal.h  render_context.cpp  render_context.h  render_plugin.cpp  renderer.cpp  renderer.h  shader_compiler.cpp  shader_compiler.h  spirv_reflect.cpp  spirv_reflect.h
plugins/text/: CMakeLists.txt
plugins/text/include/velk-ui/plugins/text/: intf_text_visual.h  plugin.h
plugins/text/include/velk-ui/plugins/text/api/: font.h  text_visual.h
plugins/text/src/: font.cpp  font.h  font_atlas.cpp  font_atlas.h  font_buffers.cpp  font_buffers.h  font_gpu_buffer.cpp  font_gpu_buffer.h  glyph_baker.cpp  glyph_baker.h  text_plugin.cpp  text_plugin.h
plugins/text/src/embedded/: inter_regular.cpp  inter_regular.h  velk_text_glsl.h
plugins/text/src/visual/: text_material.cpp  text_material.h  text_visual.cpp  text_visual.h
plugins/text/tools/: glyph_dump.cpp
samples/: CMakeLists.txt
samples/simple/: CMakeLists.txt  android_main.cpp  main.cpp  run.h
velk-render/: CMakeLists.txt  README.md
velk-render/plugins/vk/: CMakeLists.txt
velk-render/plugins/vk/include/velk-render/plugins/vk/: plugin.h
velk-render/plugins/vk/src/: vk_backend.cpp  vk_backend.h  vk_command_buffer.cpp  vk_command_buffer.h  vk_gpu_buffer.cpp  vk_gpu_buffer.h  vk_gpu_pipeline.cpp  vk_gpu_pipeline.h  vk_gpu_texture.cpp  vk_gpu_texture.h  vk_plugin.cpp  vk_plugin.h  vk_render_target_group.cpp  vk_render_target_group.h
velk-runtime/plugins/android/: CMakeLists.txt
velk-runtime/plugins/android/include/velk-runtime/plugins/android/: native_activity_main.h  plugin.h
velk-runtime/plugins/android/src/: android_asset_protocol.cpp  android_asset_protocol.h  android_log_sink.cpp  android_log_sink.h  android_plugin.cpp  android_plugin.h  android_window.cpp  android_window.h
velk-scene/: CMakeLists.txt
velk-ui/: CMakeLists.txt  README.md
velk-ui/docs/: getting-started.md  input.md  performance.md  scene.md  traits.md  update-cycle.md
velk-ui/docs/plugins/: image.md  text.md
velk-ui/include/velk-ui/: element.h  gpu_data.h  input_types.h  instance_types.h  plugin.h  types.h
velk-ui/include/velk-ui/api/: camera.h  element.h  input_dispatcher.h  renderer.h  scene.h  trait.h  visual.h
velk-ui/include/velk-ui/api/constraint/: fixed_size.h  stack.h
velk-ui/include/velk-ui/api/input/: click.h  drag.h  hover.h
velk-ui/include/velk-ui/api/material/: gradient.h  shader.h
velk-ui/include/velk-ui/api/trait/: fixed_size.h  look_at.h  matrix.h  orbit.h  stack.h  trs.h
velk-ui/include/velk-ui/api/visual/: rect.h  rounded_rect.h  texture.h  visual.h
velk-ui/include/velk-ui/ext/: input.h  material_shaders.h  trait.h  visual.h
velk-ui/include/velk-ui/interface/: intf_camera.h  intf_constraint.h  intf_element.h  intf_environment.h  intf_font.h  intf_gradient.h  intf_input_dispatcher.h  intf_input_trait.h  intf_layout_notify.h  intf_layout_trait.h  intf_material.h  intf_render_context.h  intf_render_to_texture.h  intf_renderer.h  intf_scene.h  intf_scene_observer.h  intf_texture_provider.h  intf_texture_visual.h  intf_trait.h  intf_transform_trait.h  intf_visual.h
velk-ui/include/velk-ui/interface/trait/: intf_click.h  intf_drag.h  intf_fixed_size.h  intf_hover.h  intf_look_at.h  intf_matrix.h  intf_orbit.h  intf_stack.h  intf_trs.h
velk-ui/src/: camera.cpp  camera.h  element.cpp  element.h  layout_solver.cpp  layout_solver.h  plugin.cpp  plugin.h  render_cache.cpp  render_cache.h  scene.cpp  scene.h
velk-ui/src/constraint/: fixed_size.cpp  fixed_size.h
velk-ui/src/import/: align_type_extension.cpp  align_type_extension.h  constraint_import_handler.cpp  constraint_import_handler.h  dim_type_extension.cpp  dim_type_extension.h  light_type_extension.cpp  light_type_extension.h  projection_type_extension.cpp  projection_type_extension.h  visual_import_handler.cpp  visual_import_handler.h
velk-ui/src/input/: click.cpp  click.h  drag.cpp  drag.h  hover.cpp  hover.h  input_dispatcher.cpp  input_dispatcher.h
velk-ui/src/layout/: stack.cpp  stack.h
velk-ui/src/material/: gradient_material.cpp  gradient_material.h  shader_material.h
velk-ui/src/renderer/: batch_builder.cpp  batch_builder.h  default_ui_shaders.h  deferred_lighter.cpp  frame_snippet_registry.cpp  frame_snippet_registry.h  gpu_resource_manager.cpp  gpu_resource_manager.h  rasterizer.cpp  rasterizer.h  ray_tracer.cpp  ray_tracer.h  renderer.cpp  renderer.h  scene_collector.h  view_renderer.h
velk-ui/src/transform/: look_at.cpp  look_at.h  matrix.cpp  matrix.h  orbit.cpp  trs.cpp  trs.h
velk-ui/src/visual/: cube_visual.cpp  cube_visual.h  rect_visual.cpp  rect_visual.h  rounded_rect_visual.cpp  rounded_rect_visual.h  sphere_visual.cpp  sphere_visual.h  texture_material.cpp  texture_material.h  texture_visual.cpp  texture_visual.h
(+188 files in other folders)
